fix for bug #180477.  fix crasher and other problems with toggling junk state from the advanced search dialog.  and some code cleanup. r/sr=bienvenu